# google_log_pack

./: CMakeLists.txt
example/: main.cpp
include/: hlog.h
src/: hlog.cpp
